tests/negative/regression/r17.orng
fn main() -> Int { let x: -2 = 43 } 